// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProcessBulkList component tests snapshot testing for a single abort instance 1`] = `
<Fragment>
   
  <TextContent>
    <Text
      component="h2"
    >
       
      The following process was aborted:
    </Text>
    <TextList>
      <TextListItem
        key="8035b580-6ae4-4aa8-9ec0-e18e19809e0b"
      >
        <ItemDescriptor
          itemDescription={
            Object {
              "description": null,
              "id": "8035b580-6ae4-4aa8-9ec0-e18e19809e0b",
              "name": "travels",
            }
          }
        />
      </TextListItem>
    </TextList>
  </TextContent>
  <TextContent
    className="pf-u-mt-sm"
  >
    <Text>
      Note: The process status has been updated. The list may appear inconsistent until you refresh any applied filters.
    </Text>
  </TextContent>
</Fragment>
`;

exports[`ProcessBulkList component tests snapshot testing multi-abort with aborted and skipped instances  1`] = `
<Fragment>
   
  <TextContent>
    <Text
      component="h2"
    >
       
      The following processes were aborted:
    </Text>
    <TextList>
      <TextListItem
        key="8035b580-6ae4-4aa8-9ec0-e18e19809e0b"
      >
        <ItemDescriptor
          itemDescription={
            Object {
              "description": null,
              "id": "8035b580-6ae4-4aa8-9ec0-e18e19809e0b",
              "name": "travels",
            }
          }
        />
      </TextListItem>
    </TextList>
  </TextContent>
  <TextContent
    className="pf-u-mt-sm"
  >
    <Text>
      Note: The process status has been updated. The list may appear inconsistent until you refresh any applied filters.
    </Text>
  </TextContent>
  <Divider
    className="pf-u-my-xl"
    component="div"
  />
  <TextContent>
    <Text
      component="h2"
    >
      The following processes were skipped because they were either completed or aborted:
    </Text>
    <TextList>
      <TextListItem
        key="e735128t-6tt7-4aa8-9ec0-e18e19809e0b"
      >
        <ItemDescriptor
          itemDescription={
            Object {
              "description": null,
              "id": "e735128t-6tt7-4aa8-9ec0-e18e19809e0b",
              "name": "travels",
            }
          }
        />
      </TextListItem>
    </TextList>
  </TextContent>
</Fragment>
`;

exports[`ProcessBulkList component tests snapshot testing multi-abort with no aborted instances and only skipped instances 1`] = `
<Fragment>
   
  <TextContent>
    <Text
      component="h2"
    >
       
      No processes were aborted
    </Text>
  </TextContent>
  <Divider
    className="pf-u-my-xl"
    component="div"
  />
  <TextContent>
    <Text
      component="h2"
    >
      The following processes were skipped because they were either completed or aborted:
    </Text>
    <TextList>
      <TextListItem
        key="e735128t-6tt7-4aa8-9ec0-e18e19809e0b"
      >
        <ItemDescriptor
          itemDescription={
            Object {
              "description": null,
              "id": "e735128t-6tt7-4aa8-9ec0-e18e19809e0b",
              "name": "travels",
            }
          }
        />
      </TextListItem>
    </TextList>
  </TextContent>
</Fragment>
`;

exports[`ProcessBulkList component tests snapshot testing multi-abort with no skipped instances 1`] = `
<Fragment>
   
  <TextContent>
    <Text
      component="h2"
    >
       
      The following processes were aborted:
    </Text>
    <TextList>
      <TextListItem
        key="8035b580-6ae4-4aa8-9ec0-e18e19809e0b"
      >
        <ItemDescriptor
          itemDescription={
            Object {
              "description": null,
              "id": "8035b580-6ae4-4aa8-9ec0-e18e19809e0b",
              "name": "travels",
            }
          }
        />
      </TextListItem>
    </TextList>
  </TextContent>
  <TextContent
    className="pf-u-mt-sm"
  >
    <Text>
      Note: The process status has been updated. The list may appear inconsistent until you refresh any applied filters.
    </Text>
  </TextContent>
</Fragment>
`;
